--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "jasmine": "~2.0.4"
   },
   "dependencies": {
-    "normalize.scss": "~3.0.1+normalize.3.0.1",
+    "normalize.scss": "3.0.2+normalize.3.0.2",
     "susy": "~2.1.3"
   }
 }
