--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "grunt-text-replace": "^0.3.12",
     "grunt-usemin": "^2.6.2",
     "karma-chrome-launcher": "^0.1.5",
+    "karma-coverage": "^0.2.6",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
     "karma-growl-reporter": "^0.1.1",
     "karma-html-reporter": "^0.2.4",
-    "karma-coverage": "^0.2.6",
     "karma-jasmine": "^0.2.2",
-    "karma-jasmine-ajax": "^0.1.4"
+    "karma-jasmine-ajax": "^0.1.4",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
+    "yuidoc-bootstrap-theme": "^1.0.4"
   },
   "scripts": {
     "test": "grunt test"
