--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "compass": "^0.1.0",
     "grunt": "^0.4.5",
     "grunt-bower": "^0.15.1",
+    "grunt-bump": "0.0.16",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.1",
